--- a/ISSUE_TEMPLATE/config.yml
+++ b/ISSUE_TEMPLATE/config.yml
@@ -11,3 +11,6 @@ defaults:
   - template: "feature_request.yml"
     name: "💡 機能リクエスト"
     about: "新機能のアイデアを提案する"
+  - template: "doce_request.yml"
+    name: "📝 ドキュメンテーション修正依頼"
+    about: "ドキュメンテーションの修正・追加を依頼する"
