--- a/ISSUE_TEMPLATE/config.yml
+++ b/ISSUE_TEMPLATE/config.yml
@@ -12,5 +12,5 @@ defaults:
     name: "💡 機能リクエスト"
     about: "新機能のアイデアを提案する"
   - template: "doce_request.yml"
-    name: "📝 ドキュメンテーション修正依頼"
-    about: "ドキュメンテーションの修正・追加を依頼する"
+    name: "📝 ドキュメンテーション改善・修正依頼"
+    about: "ドキュメンテーションの改善・修正を依頼する"
