--- a/ISSUE_TEMPLATE/config.yml
+++ b/ISSUE_TEMPLATE/config.yml
@@ -1,7 +1,7 @@
 blank_issues_enabled: false
 contact_links:
   - name:💬 質問・相談
-    about: バグ報告や機能リクエスト以外の質問・相談は、各リポジトリの GitHub Discussions をご使用ください。
+    about: バグ報告や機能リクエスト以外の質問・相談は、GitHub Discussions をご使用ください。
 
 # Issue作成時のテンプレート設定
 defaults:
